RESOLVED FIXED 203034
[WK2] Handle back/forward cache entry expiration in the UIProcess instead of the WebProcess
https://bugs.webkit.org/show_bug.cgi?id=203034
Summary [WK2] Handle back/forward cache entry expiration in the UIProcess instead of ...
Chris Dumez
Reported 2019-10-16 08:23:30 PDT
Move back/forward cache entry expiration logic from the WebProcess to the UIProcess, now that back/forward cache management is done in the UIProcess.
Attachments
Patch (9.23 KB, patch)
2019-10-16 09:40 PDT, Chris Dumez
no flags
Patch (9.22 KB, patch)
2019-10-16 13:09 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-16 08:23:49 PDT
Chris Dumez
Comment 2 2019-10-16 09:40:32 PDT
Antti Koivisto
Comment 3 2019-10-16 12:45:34 PDT
Comment on attachment 381076 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=381076&action=review > Source/WebCore/ChangeLog:3 > + [WK2] Move back/forward cache entry expiration from the WebProcess to the UIProcess The title says "move" but no code is deleted by this patch?
Chris Dumez
Comment 4 2019-10-16 13:09:11 PDT
WebKit Commit Bot
Comment 5 2019-10-16 13:54:30 PDT
Comment on attachment 381100 [details] Patch Clearing flags on attachment: 381100 Committed r251204: <https://trac.webkit.org/changeset/251204>
WebKit Commit Bot
Comment 6 2019-10-16 13:54:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.